# ferminet-jax

./: .coveragerc  .gitignore  AGENTS.md  CLAUDE.md  FermiNet_Implementation_Report.md  README.md  baseline.txt  baseline_benchmark.txt  baseline_new.txt  benchmark.py  benchmark.sh  benchmark_baseline.txt  benchmark_jastrow.py  benchmark_mask.py  benchmark_masked_mean.py  benchmark_mcmc.py  benchmark_mcmc2.py  benchmark_optimized.txt  benchmark_rng.py  benchmark_to_host.py  benchmark_train.py  code_review_issues.md  dummy.py  dummy_script.py  fix.py  fix2.py  fix3.py  fix4.py  fix_import.patch  fix_plan.py  fix_train.patch  improved.txt  new_benchmark.txt  optimized.txt  patch.diff  patch_train.diff  patch_train2.diff  plan.md  pyproject.toml  pyrightconfig.json  (+27 more)
.claude/: settings.local.json
G:\FermiNet\demo\results/: H2_results_1770129106.pkl
configs/: __init__.py  h2_config.py  h2_stage2_config.py
docs/: Algorithms_and_Formulas.md  Performance_Analysis_RTX3060.md  README.md  SYSTEM_DOCUMENTATION.md  Stage1_Complete_Documentation.md  Stage2_Complete_Documentation.md  Testing_and_Usage_Guide.md  api.md  architecture.md  development.md  running.md  uv_environment.md
examples/: benchmark.py  demo.py  test_helium.py  train_stable.py
scripts/: __init__.py  benchmark_checkpoint.py  benchmark_checkpoint_sync.py  benchmark_mask.py  benchmark_mcmc_split.py  benchmark_mcmc_update.py  benchmark_pmove_sync.py  benchmark_train.py  benchmark_train_loop.py  benchmark_train_pmove.py  benchmark_train_step.py  benchmark_train_step2.py  benchmark_train_step_mcmc.py  install_jax.sh  (+5 more)
(+89 files in other folders)
