[project]
name = "ferminet-jax"
version = "0.1.0"
description = "JAX-based FermiNet implementation."
readme = "CLAUDE.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
# Select one of the hardware-specific groups below.
cpu = ["jax>=0.4.30"]
gpu = ["jax[cuda12]>=0.4.30"]
tpu = ["jax[tpu]>=0.4.30"]
# Tooling for local development and tests.
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
