[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ferminet-jax"
version = "0.1.0"
description = "JAX-based FermiNet implementation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "ml-collections>=0.1.1",
  "chex>=0.1.86",
  "optax>=0.2.3",
  "kfac-jax @ git+https://github.com/google-deepmind/kfac-jax",
  "absl-py>=2.0.0",
  "attrs>=23.0.0",
]

[project.optional-dependencies]
# Select one of the hardware-specific groups below.
cpu = ["jax>=0.4.30"]
gpu = ["jax[cuda12]>=0.4.30"]
tpu = ["jax[tpu]>=0.4.30"]

[dependency-groups]
dev = [
    "jax[cuda12]>=0.4.30",
    "pytest>=7.0",
    "pytest-cov>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ferminet*"]
exclude = ["tests*", "examples*", "docs*"]
